narratiffffchiki/styles.css
@import url(fonts/FreePixel.css);
@import url(fonts/DIGITALDREAMNARROW.css);

:root{
    --main: #c6252e;
    --blue: #000080;
    --cursor: url(img/cursor/normal.png);
}

*{
    margin: 0;
    padding: 0;
    list-style: none;
    font-family: 'FreePixel';
}

::-moz-selection{
    background: var(--main);
}
::selection{
    background: var(--main);
}

::-webkit-scrollbar {
    width: 16px;
}
::-webkit-scrollbar-track {
    background: rgb(0,0,0);
    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(54,54,54,1) 23%, rgb(41, 41, 41) 47%, rgb(92, 92, 92) 50%, rgba(54,54,54,1) 100%, rgba(0,0,0,1) 100%);
}
::-webkit-scrollbar-thumb {
    background: #c7c7c7;
    background: linear-gradient(90deg, rgba(199, 199, 199, 1) 49%, rgba(164, 164, 164, 1) 50%, rgba(3, 3, 3, 1) 100%);
    border: 2px ridge #1a1a1a;
    box-shadow: inset 1px 1px 0 0 white, inset -1px -1px 0 0 gray;
}
::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {
    display: block;
    height: 17px;
    background: #c7c7c7;
    background: linear-gradient(180deg, rgba(199, 199, 199, 1) 49%, rgba(164, 164, 164, 1) 50%, rgb(119, 119, 119) 100%);
    border: 2px ridge rgb(112, 112, 112);
    box-shadow: inset 1px 1px 0 0 white, inset -1px -1px 0 0 gray;
}
::-webkit-scrollbar-button:start:decrement:active, ::-webkit-scrollbar-button:end:increment:active {
    box-shadow: inset -1px -1px 0 0 white, inset 1px 1px 0 0 gray;
}
::-webkit-scrollbar-button:end{
    background: linear-gradient(180deg, rgba(199, 199, 199, 1) 49%, rgba(164, 164, 164, 1) 50%, rgba(3, 3, 3, 1) 100%);
}


.marquee{
    animation: marquee 15s linear infinite;
}
@keyframes marquee {
    0% {
      transform: translate(100%, 0);
    }
    100% {
      transform: translate(-100%, 0);
    }
}

.border-ns{
    box-shadow: inset 2px 2px 0 0 white, inset -1px -1px 0 0 gray;
}
.border-inv{
    box-shadow: inset -2px -2px 0 0 white, inset 2px 2px 0 0 gray;
}
.border-inv-s{
    box-shadow: inset 1px 1px 0 0 #c9b0b2, 1px 1px 0 0 #c9b0b2;
    border: 4px ridge #240709;
    margin: 2px;
}
.border-small{
    box-shadow: inset 1px 1px 0 0 #c9b0b2, 1px 1px 0 0 #c9b0b2;
    border: 2px ridge #240709;
    margin: 2px;
}
.border-click{
    box-shadow: inset 2px 2px 0 0 white, inset -2px -2px 0 0 gray;
}
.border-click:active{
    box-shadow: inset -2px -2px 0 0 white, inset 2px 2px 0 0 gray, inset 4px 4px 0 0 #000, inset 2px 2px 0 20px #0000002a;
}
.border-click:active img{
    padding: 2px 0px 0px 3px;
}
.border-inside{
    box-shadow: inset 2px 2px 0 0 #cab3b4;
    border: 4px ridge #240709;
}
.border{
    box-shadow: inset 2px 2px 0 0 #c9b0b2, 2px 2px 0 0 #c9b0b2;
    border: 4px ridge #240709;
    margin: 2px;
    filter: drop-shadow(1px 1px 1px);
}
.border-simple{
    box-shadow: inset 2px 2px 0 0 white, inset -2px -2px 0 0 gray;
}

body{
    margin: 0 auto;
    width: 600px;
    background: rgb(226, 226, 226);
    cursor: var(--cursor), auto;
    background-position: center;
}
a:hover, .track:hover{
    cursor: pointer;
}

main{
    height: 100%;
    margin-top: 20px;
}

.window{
    background: url(img/carpet2.jpg);
    image-rendering: pixelated;
    background-size: 150%;
    background-position: center;
    padding: 0 0 10px 0;
    margin: 0 auto;
}
.window-title{
    padding: 7px;
    color: #fff;
    text-align: center;
    user-select: none;
    text-transform: uppercase;
    font-weight: 600;
}
.window-title h2{
    font-size: small;
    background: #000;
}
.window-content{
    padding: 5px;
    width: 540px;
    margin: 0 auto;
    image-rendering: pixelated;
    background: url(img/wood032.gif);
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 12px;
}

.menu-bar{
    display: flex;
    padding: 0px 10px 0px 10px;
    user-select: none;
    background: #bfc1c0;
    z-index: 100;
}
.menu-bar > li {
    padding: 2px 10px 2px 10px;
    position: relative;
}
.menu-bar > li:hover{
    background: var(--blue);
}
.menu-bar > li:hover > span{
    text-decoration: 1px underline dotted;
    color: #fff;
}
.menu-bar > li > .drop-menu{
    display: none;
    position: absolute;
    background: #bfc1c0;
    width: 200px;
    z-index: 100;
}
.menu-bar > li > .drop-menu li{
    height: 25px;
    display: flex;
    align-items: center;
    text-decoration: 1px underline dotted;
    padding: 2px 10px;
}
.menu-bar > li > .drop-menu li:hover{
    background: var(--blue);
    color: #fff;
}
.menu-bar li:hover .drop-menu{
    display: block;
}
.menu-bar a{
    color: #000 !important;
    text-decoration: 1px underline dotted !important;
}
.menu-bar .drop-menu li:hover a{
    color: #fff !important;
}
.menu-bar img{
    width: 16px;
    height: 16px;
    margin-right: 10px;
    filter: drop-shadow(#000 1px 1px 0px);
}
.unclickable{
    color: #747474
}
.unclickable:hover{
    background: none !important;
    color: #747474 !important;
}

.album-cover{
    display: flex;
    justify-content: space-between;
    background: #000;
    color: #fff;
    padding: 5px;
    height: 200px;
}
.album-cover img{
    width: 200px;
    image-rendering: auto;
    user-select: none;
}
.album-cover .lyrics{
    width: 100%;
    height: 200px;
    overflow: auto;
    padding: 0 10px 0 70px;
    white-space: pre-wrap;
    text-align: end;
}

.player{
    width: 100%;
    display: flex;
    align-self: center;
    flex-direction: column;
}
.details, .buttons, .slider_container{
    display: flex;
    flex-direction: row;
    align-items: center;
}
.volume_slider{
    -webkit-appearance: none;
    appearance: none; 
    outline: none;
    height: 18px;
    border-radius: 0px;
    background: #000;
    padding: 0 !important;  
    box-shadow: inset 1px 1px 0 0 #c9b0b2, 1px 1px 0 0 #c9b0b2;
    border: 2px ridge #240709;
    margin: 2px;
    filter: drop-shadow(1px 1px 1px);
    cursor: var(--cursor), auto;
} 
/* ... */

